complete the time series modeling

--- a/UK_Retail_DataAnalysis.ipynb
+++ b/UK_Retail_DataAnalysis.ipynb
@@ -396,6 +396,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Note:\n",
+    "Comparing the Returned UnitPrice=0 count before and after fixing the unit price, you can see that there are still 158 returned invoices have unit price == 0. This is because it cannot find a matched item in the earlier orders, such as the orders made before 12-9-2010. Since the sales is out of range and not counted, not counting the returned values is fine too. \n",
+    "\n",
+    "The way the returned sales is handled here may not be 100% accurate, but is acceptable."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
